<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:id="@+id/listItem" android:background="@color/black"
	android:padding="@dimen/medium_padding"
	>
	
	<TextView android:id="@+id/TeamOne" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:gravity="left"
		android:text="@string/dummy_team1"
		android:layout_alignLeft="@id/listItem" 
		android:textSize="@dimen/normal_text" 
		android:textColor="@color/white"/>
	
	<TextView android:id="@+id/vs"
		android:layout_gravity="right" 
		android:layout_width="wrap_content"
		android:layout_toRightOf="@id/TeamOne" 
		android:layout_height="wrap_content" 
		android:text="@string/vs"
		android:textSize="@dimen/medium_text" 
		android:textColor="@color/white"
		android:paddingLeft="@dimen/medium_padding"
		android:layout_alignBaseline="@id/TeamOne"
		/>
	
	<TextView android:id="@+id/TeamTwo" android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/dummy_team2" 
		android:layout_below="@id/vs"
		android:textSize="@dimen/normal_text" 
		android:textColor="@color/white"
		/>
		
</RelativeLayout>
